/*
 * Click nbfs://nbhost/SystemFileSystem/Templates/Licenses/license-default.txt to change this license
 * Click nbfs://nbhost/SystemFileSystem/Templates/Classes/Class.java to edit this template
 */
package mondoincantato;

/**
 *
 * @author trivella.augusto
 */
public class Eroe {
<<<<<<< HEAD
    private int vita, fame,sete;
    private String nome,ability;

    public Eroe(int vita, int fame, int sete, String nome, String ability) {
        this.vita = vita;
        this.fame = fame;
        this.sete = sete;
        this.nome = nome;
        this.ability = ability;
    }
=======
    private String nome;
    private boolean ability;
    private int sete,fame,vita;

    public Eroe(String nome, boolean ability, int sete, int fame, int vita) {
        this.nome = nome;
        this.ability = ability;
        this.sete = sete;
        this.fame = fame;
        this.vita = vita;
    }
    
    
>>>>>>> 2e98cea65d916082325d685ad4b9ecd650b22a8d
}
